--- a/views/index.html
+++ b/views/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Home</title>
-<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/static/js/jquery.min.js"></script>
+<script src="../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,8 +18,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="/static/js/move-top.js"></script>
-<script type="text/javascript" src="/static/js/easing.js"></script>
+<script type="text/javascript" src="../static/js/move-top.js"></script>
+<script type="text/javascript" src="../static/js/easing.js"></script>
 <script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){		
@@ -88,7 +88,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="specials">
 				<div class="special-top">
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi2.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi2.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -98,7 +98,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -108,7 +108,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi1.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi1.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi4.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi4.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -131,7 +131,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 			<div class="special-top">
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi3.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi3.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -141,7 +141,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi7.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi7.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -151,7 +151,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi6.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi6.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -161,7 +161,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="/static/images/pi5.jpg" class="img-responsive" alt="">
+						<a href="detail.html" ><img src="../static/images/pi5.jpg" class="img-responsive" alt="">
 						
 							</a>
 						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
@@ -178,7 +178,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<a href="detail.html" class="more">浏览更多</a>
 					<div class="clearfix"> </div>
 					<div class="arrow">
-						<a href="#"><img src="/static/images/arrow.png" alt=""></a>
+						<a href="#"><img src="../static/images/arrow.png" alt=""></a>
 					</div>
 				</div>
 				<!---->
