--- a/views/about/link.html
+++ b/views/about/link.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Link</title>
-    <link rel="stylesheet" href="/static/plug/layui/css/layui.css">
+    <link rel="stylesheet" href="../static/plug/layui/css/layui.css">
     <style>
 
         .main {
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-<script type="text/javascript" src="/static/plug/layui/layui.js"></script>
+<script type="text/javascript" src="../static/plug/layui/layui.js"></script>
 <div class="main layui-clear">
     <form action="/about/sendLink" method="post">
 
