--- a/views/detail.html
+++ b/views/detail.html
@@ -2,12 +2,12 @@
 <html>
 <head>
 <title>Detail</title>
-<link href="/static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="/static/js/jquery.min.js"></script>
+<script src="../static/js/jquery.min.js"></script>
 <!-- Custom Theme files -->
 <!--theme-style-->
-<link href="/static/css/style.css" rel="stylesheet" type="text/css" media="all" />
+<link href="../static/css/style.css" rel="stylesheet" type="text/css" media="all" />
 <!--//theme-style-->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -18,8 +18,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.useso.com/css?family=Rokkitt:400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.useso.com/css?family=Lobster+Two:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 <!--//fonts-->
-<script type="text/javascript" src="/static/js/move-top.js"></script>
-<script type="text/javascript" src="/static/js/easing.js"></script>
+<script type="text/javascript" src="../static/js/move-top.js"></script>
+<script type="text/javascript" src="../static/js/easing.js"></script>
 <script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){		
@@ -83,14 +83,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="col-md-9  single-top">
 				<div class="text-in">					
 						<div class="single-men">
-							<img class="img-responsive" src="/static/images/sin.jpg" alt="" />
+							<img class="img-responsive" src="../static/images/sin.jpg" alt="" />
 							<h5>Lorem Ipsum is simply dummy text</h5>
 							<p>Quisque euismod velit luctus tellus dignissim, sed aliquam tellus porttitor. Suspendisse feugiat, orci sed iaculis tristique, est neque tempus sem, ut iaculis mi augue sed enim. Nunc nec consectetur mi. Aenean nisl augue, laoreet vel justo nec, auctor congue metus. Vestibulum aliquet, eros non iaculis lobortis, velit lectus imperdiet turpis, id blandit nisi mauris nec turpis.
                        Quisque euismod velit luctus tellus dignissim, sed aliquam tellus porttitor. Suspendisse feugiat, orci sed iaculis tristique, est neque tempus sem, ut iaculis mi augue sed enim. Nunc nec consectetur mi. Aenean nisl augue, laoreet vel justo nec, auctor congue metus. Vestibulum aliquet, eros non iaculis lobortis, velit lectus imperdiet turpis, id blandit nisi mauris nec turpis.</p>
 						</div>
 						 <ul class="comment-list">
 		  		    	<h5 class="post-author_head">Written by <a href="#" title="Posts by admin" rel="author">admin</a></h5>
-		  		         <li><img src="/static/images/avatar.png" class="img-responsive" alt="">
+		  		         <li><img src="../static/images/avatar.png" class="img-responsive" alt="">
 		  		           <div class="desc">
 		  		        	<p>View all posts by: <a href="#" title="Posts by admin" rel="author">admin</a></p>
 		  		           </div>
@@ -160,7 +160,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="store-right">
 							<h6>Top rated products</h6>
 							<div class="product">
-								<img class="img-responsive fashion" src="/static/images/st1.jpg" alt=""/>
+								<img class="img-responsive fashion" src="../static/images/st1.jpg" alt=""/>
 							<div class="grid-product">
 								<a href="#" class="elit">consectetuer adipiscing elit</a>
 								<span class="price price-in"><small>$15.00</small> $10.00</span>
@@ -168,7 +168,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div>
 							</div>
 							<div class="product">
-								<img class="img-responsive fashion" src="/static/images/st2.jpg" alt=""/>
+								<img class="img-responsive fashion" src="../static/images/st2.jpg" alt=""/>
 							<div class="grid-product">
 								<a href="#" class="elit">consectetuer adipiscing elit</a>
 								<span class="price price-in"><small>$15.00</small> $10.00</span>
@@ -176,7 +176,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div>
 							</div>
 							<div class="product">
-								<img class="img-responsive fashion" src="/static/images/st3.jpg" alt=""/>
+								<img class="img-responsive fashion" src="../static/images/st3.jpg" alt=""/>
 							<div class="grid-product">
 								<a href="#" class="elit">consectetuer adipiscing elit</a>
 								<span class="price price-in"><small>$150.00</small> $10.00</span>
@@ -184,7 +184,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							<div class="clearfix"> </div>
 							</div>
 							<div class="product">
-								<img class="img-responsive fashion" src="/static/images/st4.jpg" alt=""/>
+								<img class="img-responsive fashion" src="../static/images/st4.jpg" alt=""/>
 							<div class="grid-product">
 								<a href="#" class="elit">consectetuer adipiscing elit</a>
 								<span class="price price-in"><small>$15.00</small> $10.00</span>
@@ -216,6 +216,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		</div>	
 	</div>
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-	<script src="/static/js/nem-sdk.js"></script>
-	<script src="/static/js/script.js"></script>
+	<script src="../static/js/nem-sdk.js"></script>
+	<script src="../static/js/script.js"></script>
 </html>
