--- a/views/index.html
+++ b/views/index.html
@@ -34,11 +34,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		var name=prompt("请输入您的钱包地址","您的钱包地址");
 		if (!isNaN(name))
 		{
-			window.open("publish.html");
+			window.open("/publish");
 		}
 		else
 		{
-			window.open("account.html");
+			window.open("/account");
 		}
 	}
 </script>
@@ -88,13 +88,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="specials">
 				<div class="special-top">
 					<div class="col-md-3 special-in">
-						<a href="detail.html" ><img src="../static/images/pi2.jpg" class="img-responsive" alt="">
+						<a href="/detail" ><img src="../static/images/pi2.jpg" class="img-responsive" alt="">
 						
 							</a>
-						<h5><a href="detail.html">烤肉大餐——天府一街</a></h5>
+						<h5><a href="/detail">烤肉大餐——天府一街</a></h5>
 						<p>10XEM</p>
 						<div class="details-in">
-							<a href="detail.html" class="details">详细</a>
+							<a href="/detail" class="details">详细</a>
 						</div>
 					</div>
 					<div class="col-md-3 special-in">
