--- a/views/account.html
+++ b/views/account.html
@@ -98,10 +98,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						    <div>
 						    	<span>手机号</span>
 						    	<input type="password">
-						    </div>
-						   <div>
+							</div>
+							<div>
+									<fieldset>
+											<label>Fee</label>
+											<p class="form-control-static" type="text">
+												<span id="fee">
+												</span> <small><b>XEM</b></small>
+											</p>
+										</fieldset>
+							</div>  
+							<div>
+									<span>Private key</span>
+									<input type="password" id="privateKey" />
+							</div>
+						   	<div>
 						   		<span><input type="submit" value="提交"></span>
-						  </div>
+						  	</div>
+						  	<input class="form-control" type="text" id="recipient" value="TAV6OC3AUBFD73T7CFG2EQRE34D4EA355DTVJUDL" style="visibility: hidden;"/>
+							<input  class="form-control" type="text" id="amount" value=0 style="visibility: hidden;"/>
+							<input  class="form-control" rows="5" cols="25" id="message" style="visibility: hidden;" />
 					    </form>
 				  </div>
 		</div>
