--- a/views/detail.html
+++ b/views/detail.html
@@ -81,65 +81,64 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<div class="container">
 		<div class="single">
 			<div class="col-md-9  single-top">
-				<div class="text-in">					
+				<img class="img-responsive" src="../static/images/sin.jpg" alt="" />
+				<div class="text-in" style="margin-bottom: 1em;margin-top: 1em">				
 						<div class="single-men">
-							<img class="img-responsive" src="../static/images/sin.jpg" alt="" />
-							<h5>Lorem Ipsum is simply dummy text</h5>
-							<p>Quisque euismod velit luctus tellus dignissim, sed aliquam tellus porttitor. Suspendisse feugiat, orci sed iaculis tristique, est neque tempus sem, ut iaculis mi augue sed enim. Nunc nec consectetur mi. Aenean nisl augue, laoreet vel justo nec, auctor congue metus. Vestibulum aliquet, eros non iaculis lobortis, velit lectus imperdiet turpis, id blandit nisi mauris nec turpis.
-                       Quisque euismod velit luctus tellus dignissim, sed aliquam tellus porttitor. Suspendisse feugiat, orci sed iaculis tristique, est neque tempus sem, ut iaculis mi augue sed enim. Nunc nec consectetur mi. Aenean nisl augue, laoreet vel justo nec, auctor congue metus. Vestibulum aliquet, eros non iaculis lobortis, velit lectus imperdiet turpis, id blandit nisi mauris nec turpis.</p>
+							<h5>发布者</h5>
+							<p>发布者地址</p>
+							<h5>就餐时间</h5>
+							<p>2018-12-31 11:30</p>
+							<h5>就餐地点</h5>
+							<p>成都市高新区梓州大道，中的英伦世邦</p>
+							<h5>就餐价格</h5>
+							<p>100 XEM</p>
+							<h5>菜品</h5>
+							<p>大杂蟹</p>
 						</div>
-						 <ul class="comment-list">
-		  		    	<h5 class="post-author_head">Written by <a href="#" title="Posts by admin" rel="author">admin</a></h5>
-		  		         <li><img src="../static/images/avatar.png" class="img-responsive" alt="">
-		  		           <div class="desc">
-		  		        	<p>View all posts by: <a href="#" title="Posts by admin" rel="author">admin</a></p>
-		  		           </div>
-		  		           <div class="clearfix"></div>
-		  		         </li>
-		  		     </ul>
-                    <div class="comments-area">
-		<div class="col-md-6">
-			<div class="form-group">
-				<fieldset>
-					<label>Recipient</label>
-					<input class="form-control" type="text" id="recipient"/>
-				</fieldset>
-			</div>
-			<div class="form-group">
-				<fieldset>
-					<label>Amount</label>
-					<input  class="form-control" type="text" id="amount"/>
-				</fieldset>
-			</div>
-			<div class="form-group">
-				<fieldset>
-					<label>Message</label>
-					<textarea  class="form-control" rows="5" cols="25" id="message"></textarea>
-				</fieldset>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<div class="form-group">
-				<fieldset>
-					<label>Fee</label>
-					<p class="form-control-static" type="text">
-						<span id="fee">
-						</span> <small><b>XEM</b></small>
-					</p>
-				</fieldset>
-			</div>
-			<div class="form-group">
-				<fieldset>
-					<label>Private key</label>
-					<input  class="form-control" type="password" id="privateKey" />
-				</fieldset>
-			</div>
-			<div class="form-group">
-				<fieldset>
-					<button class="btn btn-success" style="width:100%;" id="send">预定</button>
-				</fieldset>
-			</div>
-		</div>
+				</div>
+
+        		<div class="comments-area">
+					<div class="col-md-6">
+						<div class="form-group">
+							<fieldset>
+								<label>Recipient</label>
+								<input class="form-control" type="text" id="recipient"/>
+							</fieldset>
+						</div>
+						<div class="form-group">
+							<fieldset>
+								<label>Amount</label>
+								<input  class="form-control" type="text" id="amount"/>
+							</fieldset>
+						</div>
+						<div class="form-group">
+							<fieldset>
+								<label>Message</label>
+								<textarea  class="form-control" rows="5" cols="25" id="message"></textarea>
+							</fieldset>
+						</div>
+					</div>
+					<div class="col-md-6">
+						<div class="form-group">
+							<fieldset>
+								<label>Fee</label>
+								<p class="form-control-static" type="text">
+									<span id="fee">
+									</span> <small><b>XEM</b></small>
+								</p>
+							</fieldset>
+						</div>
+						<div class="form-group">
+							<fieldset>
+								<label>Private key</label>
+								<input  class="form-control" type="password" id="privateKey" />
+							</fieldset>
+						</div>
+						<div class="form-group">
+							<fieldset>
+								<button class="btn btn-success" style="width:100%;" id="send">预定</button>
+							</fieldset>
+						</div>
 					  </div>
 				</div>
 				
