--- a/views/account.html
+++ b/views/account.html
@@ -55,7 +55,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<span class="menu"> </span>
 					<ul>
 						<li  ><a href="index.html" >主页  </a><label>- </label> </li>
-						<li><a href="location.html" > 全部信息</a><label>- </label></li>
 						<li><a href="publish.html">发布信息 </a></li>
 					</ul>
 					<!--script-->
@@ -99,15 +98,15 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						    	<span>手机号</span>
 						    	<input type="password">
 							</div>
-							<div>
+							<div class="form-group">
 									<fieldset>
-											<label>Fee</label>
-											<p class="form-control-static" type="text">
-												<span id="fee">
-												</span> <small><b>XEM</b></small>
-											</p>
-										</fieldset>
-							</div>  
+										<label>Fee</label>
+										<p class="form-control-static" type="text">
+											<span id="fee">
+											</span> <small><b>XEM</b></small>
+										</p>
+									</fieldset>
+								</div>
 							<div>
 									<span>Private key</span>
 									<input type="password" id="privateKey" />
