--- a/views/detail.html
+++ b/views/detail.html
@@ -216,4 +216,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 	<script src="../static/js/nem-sdk.js"></script>
 	<script src="../static/js/script.js"></script>
+	<script src="../static/js/md5.js"></script>
 </html>
