--- a/views/index.html
+++ b/views/index.html
@@ -38,7 +38,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		}
 		else
 		{
-			window.open("/account");
+			window.open("/verify");
 		}
 	}
 </script>
