--- a/views/account.html
+++ b/views/account.html
@@ -20,6 +20,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--//fonts-->
 <script type="text/javascript" src="../static/js/move-top.js"></script>
 <script type="text/javascript" src="../static/js/easing.js"></script>
+<script src="../static/js/md5.js"></script>
 <script type="text/javascript">
 					jQuery(document).ready(function($) {
 						$(".scroll").click(function(event){		
@@ -54,7 +55,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	}
 	function press()
 	{
-		document.getElementById("insql").click();
+		console.log("click o");
+		send();
+		setTimeout(()=>{
+			document.getElementById("insql").click();
+		},6000)
 	}
 </script>
 </head>
