--- a/views/detail.html
+++ b/views/detail.html
@@ -21,13 +21,53 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script type="text/javascript" src="../static/js/move-top.js"></script>
 <script type="text/javascript" src="../static/js/easing.js"></script>
 <script type="text/javascript">
-					jQuery(document).ready(function($) {
-						$(".scroll").click(function(event){		
-							event.preventDefault();
-							$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-						});
-					});
-					</script>
+	jQuery(document).ready(function($) {
+		$(".scroll").click(function(event){		
+			event.preventDefault();
+			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+		});
+		var state = 1;
+		if(state == 0)
+		{
+			showAndHidden1();
+		}
+		else if(state == 1)
+		{
+			showAndHidden2();
+		}
+		else
+		{
+			showAndHidden3();
+		}
+	});
+
+	function showAndHidden1(){
+	var div1=document.getElementById("booking");
+	var div2=document.getElementById("comment");
+	var div3=document.getElementById("show");
+	div1.style.display='block';
+	div2.style.display='none';
+	div3.style.display='none';
+	}
+	
+	function showAndHidden2(){
+	var div1=document.getElementById("booking");
+	var div2=document.getElementById("comment");
+	var div3=document.getElementById("show");
+	div1.style.display='none';
+	div2.style.display='block';
+	div3.style.display='none';
+	}
+
+	function showAndHidden3(){
+	var div1=document.getElementById("booking");
+	var div2=document.getElementById("comment");
+	var div3=document.getElementById("show");
+	div1.style.display='none';
+	div2.style.display='none';
+	div3.style.display='block';
+	}
+</script>
 
 </head>
 <body>
@@ -96,7 +136,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 				</div>
 
-        		<div class="comments-area">
+        		<div class="comments-area" id="booking" style="display:block;">
 					<div class="col-md-6">
 						<div class="form-group">
 							<fieldset>
@@ -141,6 +181,67 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					  </div>
 				</div>
 				
+
+				<div class="comments-area" id="comment" style="display:none;">
+					<div class="col-md-6">
+						<div class="form-group">
+							<fieldset>
+								<label>Recipient</label>
+								<input class="form-control" type="text" id="recipient"/>
+							</fieldset>
+						</div>
+						<div>
+                        	<span>评语</span>
+                            <textarea name="dishes" id="dishes"></textarea>
+                        </div>
+					</div>
+				</div>
+
+
+				<div class="comments-area" id="show" style="display:none;">
+						<div class="col-md-6">
+							<div class="form-group">
+								<fieldset>
+									<label>Recipient</label>
+									<input class="form-control" type="text" id="recipient"/>
+								</fieldset>
+							</div>
+							<div class="form-group">
+								<fieldset>
+									<label>Amount</label>
+									<input  class="form-control" type="text" id="amount"/>
+								</fieldset>
+							</div>
+							<div class="form-group">
+								<fieldset>
+									<label>Message</label>
+									<textarea  class="form-control" rows="5" cols="25" id="message"></textarea>
+								</fieldset>
+							</div>
+						</div>
+						<div class="col-md-6">
+							<div class="form-group">
+								<fieldset>
+									<label>Fee</label>
+									<p class="form-control-static" type="text">
+										<span id="fee">
+										</span> <small><b>XEM</b></small>
+									</p>
+								</fieldset>
+							</div>
+							<div class="form-group">
+								<fieldset>
+									<label>Private key</label>
+									<input  class="form-control" type="password" id="privateKey" />
+								</fieldset>
+							</div>
+							<div class="form-group">
+								<fieldset>
+									<button class="btn btn-success" style="width:100%;" id="send">预定133333333</button>
+								</fieldset>
+							</div>
+						  </div>
+					</div>
 				
 			</div>
 				<div class="col-md-3 single-bottom">
