--- a/views/detail.html
+++ b/views/detail.html
@@ -2,6 +2,19 @@
 <html>
 <head>
 <title>Detail</title>
+<style> 
+	body,div,ul,li,p{margin:0;padding:0;}
+	body{color:#666;font:12px/1.5 Arial;}
+	ul{list-style-type:none;}
+	#star{position:relative;width:600px;margin:10px auto;}
+	#star ul,#star span{float:left;display:inline;height:19px;line-height:19px;}
+	#star ul{margin:0 10px;}
+	#star li{float:left;width:24px;cursor:pointer;text-indent:-9999px;background:url(../static/images/star.png) no-repeat;}
+	#star strong{color:#f60;padding-left:10px;}
+	#star li.on{background-position:0 -28px;}
+	#star p{position:absolute;top:20px;width:159px;height:60px;display:none;background:url(../static/images/icon.gif) no-repeat;padding:7px 10px 0;}
+	#star p em{color:#f60;display:block;font-style:normal;}
+</style>
 <link href="../static/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="../static/js/jquery.min.js"></script>
@@ -68,7 +81,61 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	div3.style.display='block';
 	}
 </script>
-
+<script type="text/javascript"> 
+	window.onload = function ()
+	{
+	 var oStar = document.getElementById("star");
+	 var aLi = oStar.getElementsByTagName("li");
+	 var oUl = oStar.getElementsByTagName("ul")[0];
+	 var oSpan = oStar.getElementsByTagName("span")[1];
+	 var oP = oStar.getElementsByTagName("p")[0];
+	 var i = iScore = iStar = 0;
+	 var aMsg = [
+		"很不满意|差得太离谱，太难吃了！！",
+		"不满意|有的菜很难吃，不满意！",
+		"一般|一般情况，没有描述的好。",
+		"满意|很好吃，描述一致，挺满意！",
+		"非常满意|非常好吃，描述完全一致，非常满意！！"
+		]
+	 for (i = 1; i <= aLi.length; i++)
+	 {
+	  aLi[i - 1].index = i;
+	  //鼠标移过显示分数
+	  aLi[i - 1].onmouseover = function ()
+	  {
+	   fnPoint(this.index);
+	   //浮动层显示
+	   oP.style.display = "block";
+	   //计算浮动层位置
+	   oP.style.left = oUl.offsetLeft + this.index * this.offsetWidth - 104 + "px";
+	   //匹配浮动层文字内容
+	   oP.innerHTML = "<em><b>" + this.index + "</b> 分 " + aMsg[this.index - 1].match(/(.+)\|/)[1] + "</em>" + aMsg[this.index - 1].match(/\|(.+)/)[1]
+	  };
+	  //鼠标离开后恢复上次评分
+	  aLi[i - 1].onmouseout = function ()
+	  {
+	   fnPoint();
+	   //关闭浮动层
+	   oP.style.display = "none"
+	  };
+	  //点击后进行评分处理
+	  aLi[i - 1].onclick = function ()
+	  {
+	   iStar = this.index;
+	   oP.style.display = "none";
+	   oSpan.innerHTML = "<strong>" + (this.index) + " 分</strong> (" + aMsg[this.index - 1].match(/\|(.+)/)[1] + ")"
+	  }
+	 }
+	 //评分处理
+	 function fnPoint(iArg)
+	 {
+	  //分数赋值
+	  iScore = iArg || iStar;
+	  for (i = 0; i < aLi.length; i++) aLi[i].className = i < iScore ? "on" : "";
+	 }
+	};
+	</script>
+	
 </head>
 <body>
 	<!--header-->
@@ -186,8 +253,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<div class="col-md-6">
 						<div class="form-group">
 							<fieldset>
-								<label>Recipient</label>
-								<input class="form-control" type="text" id="recipient"/>
+								<label>评分</label>
+								<div id="star">
+									<span>点击星星就能打分</span>
+									<ul>
+									<li><a href="javascript:;">1</a></li>
+									<li><a href="javascript:;">2</a></li>
+									<li><a href="javascript:;">3</a></li>
+									<li><a href="javascript:;">4</a></li>
+									<li><a href="javascript:;">5</a></li>
+									</ul>
+									<span></span>
+									<p></p>
+								</div>							
 							</fieldset>
 						</div>
 						<div>
