--- a/views/detail.html
+++ b/views/detail.html
@@ -204,6 +204,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 
         		<div class="comments-area" id="booking" style="display:block;">
+                    <form action="/changeflagone" method="post">
 					<div class="col-md-6">
 						<div class="form-group">
 							<fieldset>
@@ -246,6 +247,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</fieldset>
 						</div>
 					  </div>
+					</form>
 				</div>
 				
 
