--- a/views/detail.html
+++ b/views/detail.html
@@ -398,4 +398,5 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<script src="../static/js/nem-sdk.js"></script>
 	<script src="../static/js/script.js"></script>
 	<script src="../static/js/md5.js"></script>
+</body>
 </html>
