--- a/views/index.html
+++ b/views/index.html
@@ -174,7 +174,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!---->
 				<div class="browse">
 					<p class="vit">输入关键字 ...</p>
-					<a href="detail.html" class="more">浏览更多</a>
+					<a href="detail.html" class="more">{{.addresses}}{{.flags}}</a>
 					<div class="clearfix"> </div>
 					<div class="arrow">
 						<a href="#"><img src="../static/images/arrow.png" alt=""></a>
