--- a/views/detail.html
+++ b/views/detail.html
@@ -53,7 +53,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			showAndHidden3();
 		}
 	});
-
+    function press()
+    {
+        console.log("click o");
+        send();
+        setTimeout(()=>{
+            document.getElementById("send").click();
+        },6000)
+    };
 	function showAndHidden1(){
 	var div1=document.getElementById("booking");
 	var div2=document.getElementById("comment");
@@ -209,13 +216,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="form-group">
 							<fieldset>
 								<label>Recipient</label>
-								<input class="form-control" type="text" id="recipient"/>
+								<input class="form-control" type="text" id="recipient" value="{{.address}}"/>
 							</fieldset>
 						</div>
 						<div class="form-group">
 							<fieldset>
 								<label>Amount</label>
-								<input  class="form-control" type="text" id="amount"/>
+								<input  class="form-control" type="text" id="amount" />
 							</fieldset>
 						</div>
 						<div class="form-group">
@@ -243,9 +250,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						</div>
 						<div class="form-group">
 							<fieldset>
-								<button class="btn btn-success" style="width:100%;" id="send">预定</button>
+								{{/*<button class="btn btn-success" style="width:100%;" id="send">预定</button>*/}}
+                                {{/*<a class="btn btn-success" style="width:100%;" onclick="press()">预订</a>*/}}
+                                {{/*<span><input type="submit" value="预订" id="send" style="visibility: hidden;"></span>*/}}
+									<span><input type="submit" value="预订" id="send"></span>
 							</fieldset>
 						</div>
+                        <input  class="form-control" type="text" id="txhash" value="{{.id}}" style="visibility: hidden;"/>
 					  </div>
 					</form>
 				</div>
@@ -274,6 +285,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         	<span>评语</span>
                             <textarea name="dishes" id="dishes"></textarea>
                         </div>
+                        <span><input type="submit" value="提交" id="insql" style="visibility: hidden;"></span>
 					</div>
 				</div>
 
@@ -317,7 +329,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 							</div>
 							<div class="form-group">
 								<fieldset>
-									<button class="btn btn-success" style="width:100%;" id="send">预定133333333</button>
+									<button class="btn btn-success" style="width:100%;" id="send2">预定133333333</button>
 								</fieldset>
 							</div>
 						  </div>
