change botton name

--- a/views/publish.html
+++ b/views/publish.html
@@ -100,7 +100,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <textarea name="dishes" id="dishes"></textarea>
                         </div>
                         <div>
-                            <span><input type="submit" value="Submit"></span>
+                            <span><input type="submit" value="提交"></span>
                         </div>
                     </form>
 				  </div>
