--- a/views/detail.html
+++ b/views/detail.html
@@ -39,8 +39,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			event.preventDefault();
 			$('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
 		});
-		// var state = {{.state}};
-		var state = 1;
+		var state = {{.state}};
+		//var state = 1;
 		if(state == 0)
 		{
 			showAndHidden1();
@@ -248,6 +248,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<label>Private key</label>
 								<input  class="form-control" type="password" id="privateKey" />
 							</fieldset>
+                            <input  class="form-control" type="text" name="txhash" id="txhash" value="{{.id}}" style="display: none;"/>
 						</div>
 						<div class="form-group">
 							<fieldset>
@@ -257,7 +258,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<span><input type="submit" value="预订" id="send"></span>
 							</fieldset>
 						</div>
-                        <input  class="form-control" type="text" id="txhash" value="{{.id}}" style="visibility: hidden;"/>
 					  </div>
 					</form>
 				</div>
