--- a/views/account.html
+++ b/views/account.html
@@ -57,9 +57,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	{
 		console.log("click o");
 		send();
-		setTimeout(()=>{
-			document.getElementById("insql").click();
-		},6000)
+		// setTimeout(()=>{
+		// 	document.getElementById("insql").click();
+		// },6000)
 	}
 </script>
 </head>
@@ -146,8 +146,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<input type="password" id="privateKey" />
 							</div>
 						   	<div>
-								<a class="btn btn-success" style="width:100%;" id="send" onclick="press()">提交</a>
-						   		<span><input type="submit" value="提交" id="insql" style="visibility: hidden;"></span>
+								<a class="btn btn-success" style="width:100%;" id="send" onclick="press()">上链</a>
+						   		<span><input type="submit" value="提交" id="insql"></span>
 						  	</div>
 						  	<input class="form-control" type="text" id="recipient" value="TAV6OC3AUBFD73T7CFG2EQRE34D4EA355DTVJUDL" style="visibility: hidden;"/>
 							<input  class="form-control" type="text" id="amount" value=0 style="visibility: hidden;"/>
