--- a/views/detail.html
+++ b/views/detail.html
@@ -256,6 +256,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<input  class="form-control" type="password" id="privateKey" />
 							</fieldset>
                             <input  class="form-control" type="text" name="txhash" id="txhash" value="{{.id}}" style="display: none;"/>
+                            <input  class="form-control" type="text" name="flag" id="flag" value="1" style="display: none;"/>
 						</div>
 						<div class="form-group">
 							<fieldset>
@@ -271,6 +272,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				
 
 				<div class="contact-left" id="comment" style="display:none;">
+                    <form action="/changeflagone" method="post">
 					<div class="">
 						<div class="form-group">
 							<fieldset>
@@ -292,9 +294,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div>
                         	<span>评语</span>
                             <textarea name="dishes" id="dishes"></textarea>
+                            <input  class="form-control" type="text" name="txhash" id="txhash" value="{{.id}}" style="display: none;"/>
+                            <input  class="form-control" type="text" name="flag" id="flag" value="2" style="display: none;"/>
                         </div>
                         <span><input type="submit" value="提交"></span>
 					</div>
+                    </form>
 				</div>
 
 
